--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,8 @@
 
     <div class="wrapper">
       <article class="span-8 prepend-2">
-        <h1>Samurai Payments Demo</h1>
+        <h1>Samurai Demo</h1>
+        <hr>
         <%= yield %>
       </article>
     </div>
