Pull layout file over the air from github, nice.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,20 +1,8 @@
 <html>
   <head>
-    <link href="http://samurai-app.feefighters.com/samurai/assets/application-916fd2c15c94ef6201e7bdcfdc61b3aa.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="https://raw.github.com/FeeFighters/samurai-sinatra-demo/master/css/application.css?login=jkrall&token=3c7e2af357ef88e1fcea2418916d9444" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <header id="banner" role="banner">
-      <nav class="mainnav">
-        <div class="wrapper">
-          <h1 class="logo">
-            <a href="/samurai" class="samurai"><span class="ir mark"></span><span class="ir home"></span><span class="ir type">Samurai</span></a>
-            <span class="by">by</span>
-            <a href="http://feefighters.com" class="ir feefighters">FeeFighters</a>
-          </h1>
-        </div>
-      </nav>
-    </header>
-
     <div class="wrapper">
       <article class="span-8 prepend-2">
         <h1>Samurai Demo</h1>
