Switching to public repo

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="https://raw.github.com/FeeFighters/samurai-sinatra-demo/master/css/application.css?login=jkrall&token=3c7e2af357ef88e1fcea2418916d9444" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="https://raw.github.com/FeeFighters/samurai-sinatra-demo/master/css/application.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div class="wrapper">
