--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <link href="https://raw.github.com/FeeFighters/samurai-sinatra-demo/master/css/application.css" media="screen" rel="stylesheet" type="text/css"/>
