Switching to github pages css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="https://raw.github.com/FeeFighters/samurai-sinatra-demo/master/css/application.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="http://feefighters.github.com/samurai-sinatra-demo/application.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div class="wrapper">
