--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,10 +5,24 @@
   </head>
   <body>
     <div class="wrapper">
-      <article class="span-8 prepend-2">
-        <h1>Samurai Demo</h1>
-        <hr>
+      <h1>Samurai Demo</h1>
+      <hr>
+      <article class="span-7">
         <%= yield %>
+      </article>
+      <article class="span-5 last">
+        <% if request.path == '/' %>
+          <h3>Accepted Card Types:</h3>
+          <table class='flushleft'>
+            <tr><th>Valid:</strong></th><td><code style="border:none;">4111111111111111</code></td></tr>
+            <tr><th>Denied:</strong></th><td><code style="border:none;">4242424242424242</code></td></tr>
+            <tr><td colspan='2'><em>Any other card number will throw an exception.</em></td></tr>
+          </table>
+        <% else %>
+        <p class='callout highlight-block span-3'>
+          <strong>Start a</strong> <a href='/' class='button blue small'>New Transaction</a>
+        </p>
+        <% end %>
       </article>
     </div>
   </body>
