Fixing Samurai.js url!

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %link{:href=>"http://feefighters.github.com/samurai-sinatra-demo/css/application.css", :media=>"screen", :rel=>"stylesheet", :type=>"text/css"}
-    %script{:src=>"https://samurai-app.feefighters.com/samurai/assets/api/samurai.js"}
+    %script{:src=>"https://samurai.feefighters.com/samurai/assets/api/samurai.js"}
     %script Samurai.init({debug: true, debugEasyXDM: true, merchant_key: '#{Samurai.options[:merchant_key]}'})
   %body
     .wrapper
