Removed deprecated sandbox parameter and fixed a javascript reserved word issue.

--- a/views/samurai_js/payment_form.erb
+++ b/views/samurai_js/payment_form.erb
@@ -4,7 +4,6 @@
   // Initialize Samurai.js.
   Samurai.init({
     merchant_key: '<%= Samurai.options[:merchant_key] %>',
-    sandbox: true,
     debug: true
   });
 
@@ -28,7 +27,7 @@
           } else {
             // Let the error handler scan the response object for errors,
             // then display these errors
-            Samurai.PaymentErrorHandler.for($('form').get(0)).handleErrorsFromResponse(transaction);
+            Samurai.PaymentErrorHandler.forForm($('form').get(0)).handleErrorsFromResponse(transaction);
           }
         });
       });    
